--- a/styles/style.css
+++ b/styles/style.css
@@ -33,9 +33,8 @@
 
 .header__title {
   width: 730px;
-  margin: 0 0 0 64px;
+  margin: auto 0 auto 64px;
   z-index: 1;
-  align-self: center;
   font-size: 102px;
   font-weight: 600;
   line-height: 96px;
